# ARS-N

./: .gitignore  .python-version  README.md  experiment_environment.txt  prompt.txt  pyproject.toml  requirements.txt
docs/: candidate_multilabel_suite.md  real_strongly_convex_datasets.md
input/generate_data/: logistic.yml  logistic_dense_001.yml  logistic_n10000.yml  logistic_n5000.yml  logistic_sparse_beta_001.yml  quadratic.yml
input/optimize/: agd_unknown_logistic.yml  agd_unknown_quadratic.yml  ars_cn_logistic.yml  gd_logistic.yml  (+16 more)
scripts/: compare_npz_problem_metadata.py  compare_npz_same_data.py  create_candidate_multilabel_suite.py  create_exp_4_epsilon_3seed.py  create_exp_5_madelon.py  create_exp_6_madelon_noreg.py  create_exp_7_flickr.py  create_exp_8_flickr_reg_variants.py  create_exp_configs.py  create_logistic_n5000_compare_configs.py  create_real_logistic_compare_configs.py  create_real_logistic_compare_s_sweep_configs.py  create_real_noreg_convex_compare_configs.py  create_real_strongly_convex_compare_configs.py  generate_logistic_benchmarks_dim1000.sh  generate_real_logistic_datasets.sh  run_logistic_benchmarks_dim1000_all.sh  run_logistic_n5000_compare_all.sh  run_logistic_n5000_compare_t_auto_all.sh  run_pipeline_exp_all.sh  run_real_logistic_all.sh  run_real_logistic_s50_t_sweep.sh  summarize_candidate_multilabel_results.py  verify_generated_problem.py
src/: __init__.py  cli.py  config.py  registry.py
tests/: test_plotting_aggregate.py  test_plotting_panels.py  test_real_strongly_convex_problems.py  test_rk_modes.py  test_smoke_quadratic.py
(+2820 files in other folders)
