[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ars-rn-experiments"
version = "0.1.0"
description = "YAML driven numerical optimization experiments for ARS-N style methods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
mnist = ["torchvision>=0.17"]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
